# wager_evaluator

./: README.md
BlackJack2/: CMakeLists.txt  blackjack.cpp  blackjack.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  simstats.cpp  simstats.h
